docs/PARSER/SPL Grammar.txt
S 			→ PROG

PROG 		→ CODE PROG_

PROG' 		→ ; PROC_DEFS | ϵ

PROC_DEFS 	→ PROC PROC_DEFS'

PROC_DEFS'  → PROC_DEFS | ϵ

PROC 		→ proc UserDefinedIdentifier { PROG }

CODE 		→ INSTR CODE'

CODE' 		→ ; CODE | ϵ

DECL 		→ TYPE NAME DECL'

DECL' 		→ ; DECL | ϵ

IO 			→ input ( VAR ) | output ( VAR )

COND_BRANCH → if ( BOOL ) then { CODE } COND_BRANCH'

COND_BRANCH'→ else { CODE } | ϵ

COND_LOOP 	→ while ( BOOL ) { CODE } | for ( VAR = 0; VAR < VAR ; VAR = add ( VAR , 1 ) ) { CODE }

CALC 		→ add ( CALC' | sub ( CALC' | mult ( CALC'

CALC' 		→ NUMEXPR , CALC"

CALC" 		→ NUMEXPR )

BOOL 		→ T | F | VAR | eq ( VAR , VAR ) | ( VAR < VAR ) | ( VAR > VAR ) | not BOOL | and ( BOOL' | or ( BOOL'

BOOL' 		→ BOOL , BOOL"

BOOL" 		→ BOOL )

INSTR 		→ halt | DECL | IO | CALL | ASSIGN  | COND_BRANCH | COND_LOOP

NUMEXPR 	→ VAR | CALC | integerLiteral

TYPE 		→ num | string | bool

CALL 		→ userDefinedIdentifier

NAME 		→ userDefinedIdentifier

VARIABLE	→ userDefinedIdentifier

ASSIGN 		→ VAR = ASSIGN'

ASSIGN' 	→ stringLiteral | VAR | NUMEXPR | BOOL
